Skeleton creation index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,65 @@
 </head>
 
 <body>
-
+  <div class="conteiner">
+    <header>
+      <div class="conteiner-img">
+        <img src="img/logo.svg" alt="Лого Алгоритмики">
+      </div>
+      <div class="conteiner-list">
+        <nav class="navigation">
+          <a href="#">БАНК</a>
+          <a href="#">БИЗНЕС</a>
+          <a href="#">ИНВЕСТИЦИИ</a>
+          <a href="#">СТРАХОВАНИЕ</a>
+          <a href="#">МОБАЙЛ</a>
+          <a href="#">ПУТЕШЕСТВИЯ</a>
+          <a href="#">РАЗВЛЕЧЕНИЯ</a>
+        </nav>
+      </div>
+      <div class="conteiner-button">
+        <button class="button">Войти</button>
+      </div>
+    </header>
+    <main>
+      <div class="main-header">
+        <h1 class="main-header-text">Ковертер валют онлайн</h1>
+      </div>
+      <div class="box-converter">
+        <div class="left-box">
+          <p>У меня есть</p>
+          <div class="left-box-button">
+            <button class="btn-money">RUB</button>
+            <button class="btn-money">USD</button>
+            <button class="btn-money">EUR</button>
+            <button class="btn-money">GBP</button>
+            <select name="left" id="select-left"></select>
+          </div>
+          <div class="left-input-value">
+            <input type="number" required>
+            <p class="text-about-converter"></p>
+          </div>
+        </div>
+        <div class="mid-box">
+          <img src="img/Arroy.svg" alt="Реверс стрелки">
+        </div>
+        <div class="right-box">
+          <p>У меня есть</p>
+          <div class="right-box-button">
+            <button class="btn-money">RUB</button>
+            <button class="btn-money">USD</button>
+            <button class="btn-money">EUR</button>
+            <button class="btn-money">GBP</button>
+            <select name="right" id="select-right"></select>
+          </div>
+          <div class="rigth-input-value">
+            <input type="number" required>
+            <p class="text-about-converter"></p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
 </body>
 
 </html>
