Adding logic to the project

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <button class="btn-money">USD</button>
             <button class="btn-money">EUR</button>
             <button class="btn-money">GBP</button>
-            <select class="btn-money-sel" name="left" id="select-left">
-              <option value="select-option"></option>
+            <select class="btn-money-sel" name="left" id="select-value">
+              <option id="option-create" value="select-option"></option>
             </select>
           </div>
           <div class="input-value">
-            <input class="input-about" type="number" required>
+            <input class="input-about" type="number" value="1" required>
             <p class="text-about-converter"></p>
           </div>
         </div>
@@ -65,8 +65,8 @@
             <button class="btn-money">USD</button>
             <button class="btn-money">EUR</button>
             <button class="btn-money">GBP</button>
-            <select class="btn-money-sel" name="right" id="select-right">
-              <option value="select-option"></option>
+            <select class="btn-money-sel" name="right" id="select-value">
+              <option id="option-create" value="select-option"></option>
             </select>
           </div>
           <div class="input-value">
