Fix/ logic to the project

--- a/index.html
+++ b/index.html
@@ -39,21 +39,20 @@
         <div class="left-box">
           <p class="converter-description">У меня есть</p>
           <div class="box-button">
-            <button class="btn-money">RUB</button>
-            <button class="btn-money">USD</button>
-            <button class="btn-money">EUR</button>
-            <button class="btn-money">GBP</button>
-            <select class="btn-money-sel" name="left" id="select-value">
-              <option id="option-create" value="select-option"></option>
+            <button id="btn-left-RUB" class="btn-left-money">RUB</button>
+            <button id="btn-left-USD" class="btn-left-money">USD</button>
+            <button id="btn-left-EUR" class="btn-left-money">EUR</button>
+            <button id="btn-left-GBP" class="btn-left-money">GBP</button>
+            <select class="select-left-money" name="left" id="select-value">
             </select>
           </div>
           <div class="input-value">
-            <input class="input-about" type="number" value="1" required>
+            <input id="input-left" class="input-about" type="number" value="1" required>
             <p class="text-about-converter"></p>
           </div>
         </div>
         <div class="mid-box">
-          <img class="arroy-img" src="img/Arroy.svg" alt="Реверс стрелки">
+          <img class="arroy-img" id="arrow-img" src="img/Arroy.svg" alt="Реверс стрелки">
         </div>
         <div class="download">
           <p class="download-text">Loading</p>
@@ -61,16 +60,15 @@
         <div class="right-box">
           <p class="converter-description">Хочу приобрести</p>
           <div class="box-button">
-            <button class="btn-money">RUB</button>
-            <button class="btn-money">USD</button>
-            <button class="btn-money">EUR</button>
-            <button class="btn-money">GBP</button>
-            <select class="btn-money-sel" name="right" id="select-value">
-              <option id="option-create" value="select-option"></option>
+            <button id="btn-right-RUB" class="btn-right-money">RUB</button>
+            <button id="btn-right-USD" class="btn-right-money">USD</button>
+            <button id="btn-right-EUR" class="btn-right-money">EUR</button>
+            <button id="btn-right-GBP" class="btn-right-money">GBP</button>
+            <select class="select-right-money" name="right" id="select-value">
             </select>
           </div>
           <div class="input-value">
-            <input class="input-about" type="number" required>
+            <input id="input-right" class="input-about" type="number" required>
             <p class="text-about-converter"></p>
           </div>
         </div>
