--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script defer src="index.js"></script>
-  <title>Currency-converter-development</title>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <title>Currency-converter-development</title>
 </head>
 
 <body>
@@ -74,9 +73,10 @@
     </main>
   </div>
   <div class="overlay hidden">
-    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_jny63J.json" background="transparent" speed="1"
-      style="width: 500px; height: 500px;" loop autoplay></lottie-player>
+    <lottie-player class="lotti-plaer" src="https://assets2.lottiefiles.com/packages/lf20_jny63J.json"
+      background="transparent" speed="1" loop autoplay></lottie-player>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
